# python-project-template

./: .gitignore  404.html  README.md  mkdocs.yml  mygui.spec  pyproject.toml
docs/: how-to-guides.md  index.md  reference.md
how-to-guides/: index.html
lib/: info.md
scripts/: build_executable.bat
site/: index.html  objects.inv
site/explanation/: index.html
site/reference/: index.html
site/tutorials/: index.html
src/mypackage/: __init__.py  mygui.py  mymodule.py
tests/: test.py
